--- a/views/index.pug
+++ b/views/index.pug
@@ -4,31 +4,60 @@ html(lang="en")
         meta( charset="utf-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
-        link( rel="stylesheet" type="text/css" href="https://www.ft.com/__origami/service/build/v2/bundles/css?modules=o-grid@^4.3.8,o-fonts@^3.0.4,o-header@^7.2.9,o-buttons@^5.8.5")
+        link( rel="stylesheet" type="text/css" href="https://www.ft.com/__origami/service/build/v2/bundles/css?modules=o-grid@^4.3.8,o-fonts@^3.0.4,o-header@^7.2.9,o-header-services@^2.0.5,o-buttons@^5.8.5")
         link( rel="stylesheet" type="text/css" href="/assets/css/style.css")
-        script(src="https://www.ft.com/__origami/service/build/v2/bundles/js?modules=o-grid@^4.3.8,o-fonts@^3.0.4,o-header@^7.2.9,o-buttons@^5.8.5" async)
+        script(src="https://www.ft.com/__origami/service/build/v2/bundles/js?modules=o-grid@^4.3.8,o-fonts@^3.0.4,o-header@^7.2.9,o-header-services@^2.0.5,o-buttons@^5.8.5" async)
     body
-        header.o-header.o-header--simple(data-o-component='o-header', data-o-header--no-js='')
-            .o-header__row.o-header__top
-                .o-header__container
-                    .o-header__top-wrapper
-                        .o-header__top-column.o-header__top-column--left
-                            a.o-header__top-link.o-header__top-link--search(href='#o-header-search', aria-controls='o-header-search', title='Open search bar')
-                                span.o-header__top-link-label Search
-                        .o-header__top-column.o-header__top-column--center
-                            a.o-header__top-logo(href='/', title='Go to Financial Times homepage')
-                                span.o-header__visually-hidden Financial Times
-            #o-header-search.o-header__row.o-header__search.o--if-js(role='search', data-o-header-search='')
-                .o-header__container
-                    .o-header__top-wrapper
-                        .o-header__top-column.o-header__top-column--left
-                        form.o-header__search-form(action='/search', role='search', aria-label='Site search')
-                            label.o-header__visually-hidden(for='o-header-search-term-js')
-                                | Search the 
-                                abbr(title='Financial Times') FT
-                            input#o-header-search-term-js.o-header__search-term(name='q', type='text', placeholder='Search the FT')
-                            button.o-header__search-submit(type='submit')
-                                | Search
-                            button.o-header__search-close(type='button', aria-controls='o-header-search', title='Close search bar')
-                                span.o-header__visually-hidden Close
-script(src='//www.ft.com/__origami/service/build/v2/bundles/js?modules=o-header%407.2.9%3A%2Fdemos%2Fsrc%2Fmain.js%2Co-colors%2Co-normalise')
+    header.o-header(data-o-component='o-header', data-o-header--no-js='')
+        .o-header__row.o-header__top
+            .o-header__container
+                .o-header__top-wrapper
+                    .o-header__top-column.o-header__top-column--left
+                        a.o-header__top-link.o-header__top-link--search(href='#o-header-search', aria-controls='o-header-search-js', title='Open search bar')
+                            span.o-header__top-link-label Search
+                    .o-header__top-column.o-header__top-column--center
+                        a.o-header__top-logo(href='/', title='Go to Financial Times homepage')
+                            span.o-header__visually-hidden Financial Times
+                    .o-header__top-column.o-header__top-column--right
+
+        #o-header-search-js.o-header__row.o-header__search(role='search', data-o-header-search='')
+            .o-header__container
+                form.o-header__search-form(action='/search', role='search', aria-label='Site search')
+                    label.o-header__visually-hidden(for='o-header-search-term-js')
+                        | Search the 
+                        abbr(title='Financial Times') FT
+                    input#o-header-search-term-js.o-header__search-term(name='q', type='text', placeholder='Search the FT')
+                    button.o-header__search-submit(type='submit')
+                        | Search
+                    button.o-header__search-close.o--if-js(type='button', aria-controls='o-header-search-js', title='Close search bar')
+                        span.o-header__visually-hidden Close
+        nav#o-header-nav-mobile.o-header__row.o-header__nav.o-header__nav--mobile(role='navigation', aria-label='Main navigation')
+            ul.o-header__nav-list
+                li.o-header__nav-item
+                    a.o-header__nav-link.o-header__nav-link--primary(href='', aria-label='Current page', aria-selected='true') Home
+                li.o-header__nav-item
+                    a.o-header__nav-link.o-header__nav-link--primary(href='') FastFT
+                li.o-header__nav-item
+                    a.o-header__nav-link.o-header__nav-link--primary(href='') Markets Data
+        nav#o-header-nav-desktop.o-header__row.o-header__nav.o-header__nav--desktop(role='navigation', aria-label='Main navigation')
+            .o-header__container
+                ul.o-header__nav-list.o-header__nav-list--left
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='', aria-label='Current page', aria-selected='true') Home
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') World
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') UK
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') Companies
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') Markets
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') Opinion
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') Work & Careers
+                    li.o-header__nav-item
+                        a#o-header-link-.o-header__nav-link.o-header__nav-link--primary(href='') Life & Arts
+                ul.o-header__nav-list.o-header__nav-list--right
+
+    script(src='//www.ft.com/__origami/service/build/v2/bundles/js?modules=o-header%407.2.9%3A%2Fdemos%2Fsrc%2Fmain.js%2Co-colors%2Co-normalise')
