mobile version support

--- a/views/companies.pug
+++ b/views/companies.pug
@@ -3,4 +3,4 @@ extends index.pug
 block content
     h1 Companies
     block location
-        - var location = "companies";
+        - var loc = "companies";
