--- a/views/opinion.pug
+++ b/views/opinion.pug
@@ -3,4 +3,4 @@ extends index.pug
 block content
     h1 Opinion
     block location
-        - var location = "opinion";
+        - var loc = "opinion";
