--- a/views/search.pug
+++ b/views/search.pug
@@ -1,6 +1,6 @@
 extends index
 
 block content
-    h1 Search query
+    h1 Search: #{q}
 block location
-    - var location = "search";
+    - var loc = "search";
