--- a/views/uk.pug
+++ b/views/uk.pug
@@ -3,4 +3,4 @@ extends index.pug
 block content
     h1 United Kingdom
     block location
-        - var location = "uk";
+        - var loc = "uk";
