--- a/views/home.pug
+++ b/views/home.pug
@@ -2,5 +2,5 @@ extends index.pug
 
 block content
     h1 News
-block location
-    - var location = "home";
+    block location
+        - var loc = "home";
