--- a/views/lifeandarts.pug
+++ b/views/lifeandarts.pug
@@ -3,4 +3,4 @@ extends index.pug
 block content
     h1 Life and Arts
     block location
-        - var location = "laa";
+        - var loc = "laa";
