--- a/views/markets.pug
+++ b/views/markets.pug
@@ -3,4 +3,4 @@ extends index.pug
 block content
     h1 Markets
     block location
-        - var location = "markets";
+        - var loc = "markets";
