--- a/views/workandcareers.pug
+++ b/views/workandcareers.pug
@@ -3,4 +3,4 @@ extends index.pug
 block content
     h1 Work and Careers
     block location
-        - var location = "wac";
+        - var loc = "wac";
